<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">VSDroid</string>
	<string name="title_activity_settings">VSDroid</string>
	<string name="pref_reopen_log">ログファイル再作成</string>
	<string name="pref_set_to_ready_state">ラップ計測初期化 (+Vol x1)</string>
	<string name="pref_rm_fastest_lap">最速ラップ削除 (+Vol x2)</string>
	<string name="pref_caribration">キャリブレーション (+Vol x3)</string>
	<string name="pref_vsd_mode">VSD計測モード</string>
	<string name="pref_sectors">セクター数</string>
	<string name="pref_gymkhana_start">ジムカーナ スタート距離</string>
	<string name="pref_connection_mode">接続モード</string>
	<string name="pref_ip_addr">VSD IPアドレス</string>
    <string name="pref_bt_devices_vsd">VSD Bluetooth</string>
    <string name="pref_use_btgps">Bluetooth GPS 使用</string>
    <string name="pref_use_ubx_gga">GGA センテンス使用</string>
    <string name="pref_category_ubx">u-blox 設定</string>
    <string name="pref_use_ubx_beidou">BeiDou 使用</string>
    <string name="pref_bt_devices_gps">GPS Bluetooth</string>
	<string name="pref_circuit">サーキット選択</string>
	<string name="pref_eco_mode">エコモード</string>
	<string name="pref_summery_eco_mode">エコ運転を促す</string>
	<string name="pref_roms">VSDファームウェア</string>
	<string name="pref_replay_log">再生するログ</string>
	<string name="pref_system_dir">VSD ディレクトリ</string>
	<string name="pref_debug_info">デバッグ情報</string>
	<string name="pref_log_hz">ログ Hz</string>
	<string name="pref_fw_send_wait">FW 送信 wait (ms)</string>
	<string name="pref_wheel_select">ホイール選択</string>
	<string name="pref_wheel_select_normal">ノーマルホイール</string>
    <string name="pref_wheel_select_CE28N">CE28N</string>
    <string name="pref_category_main">メイン</string>
    <string name="pref_category_circuit">サーキット設定</string>
    <string name="pref_category_connect">接続設定</string>
    <string name="pref_category_other">その他の設定</string>
	<string name="mode_laptime">ラップタイム</string>
	<string name="mode_gymkhana">ジムカーナ</string>
	<string name="mode_0_400">0-400m</string>
	<string name="mode_0_100">0-100km/h</string>
	<string name="conn_mode_ether">無線LAN</string>
	<string name="conn_mode_bluetooth">Bluetooth</string>
	<string name="conn_mode_gps">GPS のみ</string>
	<string name="conn_mode_logreplay">ログ再生</string>
    <string name="statmsg_update">画面更新</string>
	<string name="statmsg_gps_updated">GPS更新</string>
	<string name="statmsg_gps_disconnected">GPS切断</string>
	<string name="statmsg_tcpip_connecting">TCP/IP: 接続中</string>
	<string name="statmsg_tcpip_connected">TCP/IP: 接続完了</string>
	<string name="statmsg_loadfw_loading">FW: ロード中</string>
	<string name="statmsg_loadfw_loaded">FW: ロード完了</string>
	<string name="statmsg_loadfw_none">[W] FW: 指定された FW はありません</string>
	<string name="statmsg_loadfw_magic">FW: マジック送信</string>
	<string name="statmsg_loadfw_wait">FW: VSD からの通信待機中</string>
	<string name="statmsg_loadfw_sending">FW: コード送信中</string>
	<string name="statmsg_loadfw_ioerror">[E] FW: IO エラー</string>
	<string name="statmsg_loadfw_senderror">[E] FW: コード送信中のエラー</string>
	<string name="statmsg_bluetooth_connecting">Bluetooth: 接続中</string>
	<string name="statmsg_bluetooth_connected">Bluetooth: 接続完了</string>
	<string name="statmsg_bluetooth_na">[E] Bluetooth: BT が無効</string>
	<string name="statmsg_bluetooth_dev_not_selected">[E] Bluetooth: デバイスが選択されていません</string>
	<string name="statmsg_mklog_failed">[E] ログファイル作成失敗</string>
	<string name="statmsg_disconnected">[E] 接続切断</string>
	<string name="statmsg_emulog_finished">ログ再生終了</string>
	<string name="statmsg_emulog_open_failed">[E] 再生ログが見つかりません</string>
	<string name="statmsg_emulog_failed">[E] ログ再生中にエラー発生</string>
</resources>
